# ChangeLog for sci-libs/neartree
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/neartree/ChangeLog,v 1.21 2012/05/30 19:04:57 jlec Exp $

*neartree-3.1.1-r2 (30 May 2012)

  30 May 2012; Justin Lecher <jlec@gentoo.org> -neartree-3.1.1-r1.ebuild,
  +neartree-3.1.1-r2.ebuild, files/CMakeLists.txt:
  Don't install into /usr/usr/lib

*neartree-3.1.1-r1 (30 May 2012)

  30 May 2012; Justin Lecher <jlec@gentoo.org> +neartree-3.1.1-r1.ebuild,
  +files/CMakeLists.txt, metadata.xml:
  Clean buildsystem and move to cmake instead of patching

  01 Mar 2012; Brent Baude <ranger@gentoo.org> neartree-2.3.2.ebuild:
  Marking neartree-2.3.2 ppc for bug 393999

  21 Dec 2011; Justin Lecher <jlec@gentoo.org> -neartree-2.3.1-r1.ebuild:
  Cleaned old

  21 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> neartree-2.3.2.ebuild:
  x86 stable wrt bug #393999

  15 Dec 2011; Justin Lecher <jlec@gentoo.org> neartree-2.3.2.ebuild,
  neartree-3.1.1.ebuild:
  Handle static libs, as requested by ago, #393999

  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> neartree-2.3.2.ebuild:
  Stable for AMD64, wrt bug #393999

  15 Dec 2011; Justin Lecher <jlec@gentoo.org> neartree-2.3.2.ebuild:
  Add missing die before ago complains

*neartree-3.1.1 (14 Dec 2011)

  14 Dec 2011; Justin Lecher <jlec@gentoo.org> +files/3.1.1-gentoo.patch,
  +files/3.1.1-notest.patch, +files/3.1.1-test.patch,
  -files/2.1.4-gcc4.3.patch, -files/2.1.4-gentoo.patch,
  -files/2.1.4-iterator.patch, -neartree-2.1.4-r2.ebuild,
  -neartree-2.3.1.ebuild, +neartree-3.1.1.ebuild:
  Version Bump

  09 May 2011; Justin Lecher <jlec@gentoo.org> +files/2.3.2-notest.patch,
  neartree-2.3.2.ebuild:
  Do not test during installation patch

*neartree-2.3.2 (05 May 2011)

  05 May 2011; Justin Lecher <jlec@gentoo.org> +files/2.3.2-gentoo.patch,
  neartree-2.3.1.ebuild, neartree-2.3.1-r1.ebuild, +neartree-2.3.2.ebuild:
  Version Bump, notified by euscan
