@@ -8,19 +8,19 @@ AUX 2.3.2-notest.patch 909 RMD160 ebe5d417543eb4c2858b437e72fd27481f4d2029 SHA1 
 AUX 3.1.1-gentoo.patch 4126 RMD160 cf24a708043b3c787480e1579659f85eb9d1c2ea SHA1 6382cd1a3249dedfe878af09f2b94728de7c2bf5 SHA256 c8f982a452150e77af0fdce0c553482843f01035da21239cbc0fb29617ea8a31
 AUX 3.1.1-notest.patch 1366 RMD160 9b5c3478ccbe1903a2c9f767187db548eb2676b1 SHA1 7599c18b060ad7343e250e9462698e050f209943 SHA256 8be383d574238ee7624be5ae9ad2bcb764bf7527278374510b4647dce5448fc4
 AUX 3.1.1-test.patch 1199 RMD160 9533be0e26e4c950671eff35edf7d7c7274c2851 SHA1 61bbd5408793af174f7b06409b1caeb464196a55 SHA256 aaeac706dbd67c700907d6ee9a21229cbf63ee86b15891e1839811289871e7ba
-AUX CMakeLists.txt 859 RMD160 e03d93c131c0b9e98ebda4d03e9782cb1774e6c8 SHA1 7b66e1afa5cb5bb1235defd1c68f0ac191924f8a SHA256 04ad63059f47635c3a424b4ee3b1ca29d13133608828e091a43a8fb9a9b4e819
+AUX CMakeLists.txt 713 RMD160 b9d0da29817141aee3dc4e7d745dd4e8fe8103d6 SHA1 dd2f396bd4470f3021251bab00924face6f9f5a3 SHA256 32ad9057abd52e07eb1d6870467e3903b7c5ba3e99f8a26a05e62d7b9ecb16a1
 DIST neartree-2.3.2.tar.gz 99412 RMD160 6969e5d82b70462bc0a61913b72e37feef3028d1 SHA1 5963e766f9de2a1c8b111c9b60e314760c2ac297 SHA256 1bdb2f9e157008e2c99ffbbe031b36b0ccb95ef18cd6df5a1b06892c9a562f2c
 DIST neartree-3.1.1.tar.gz 124848 RMD160 9b3d8a1a0cab19c36f136adbb6b341f8c36b50a2 SHA1 7ebb331c850665af68ffbe01c53278ada6a8cf8a SHA256 5f26d0bef816f492d3939fbe06b8523a495a1fe4d06e9f8283f68a55436961ae
 EBUILD neartree-2.3.2.ebuild 1268 RMD160 df3832b1fbf4ff649ebca1581dd3c7fc10ee9009 SHA1 ccf539f56577dc4e4b359964f605cb4a366f5008 SHA256 d6578ec02bf8eeeccb8d9e1b29ba4c1d2e7d664abe1bee72e2a0978f168ed330
-EBUILD neartree-3.1.1-r2.ebuild 762 RMD160 d638979b974282b1f88622f0b8f4b47fcf4bfb47 SHA1 ea0733a4f22fb4a33c1ac348fdb887b4c699c309 SHA256 f5f7624e03c71c5f296facb0827e09c07e6c8e339452cb614d6d974413d03b5e
+EBUILD neartree-3.1.1-r3.ebuild 876 RMD160 dbc06ffe4f9b5baea6a9757bcfca0c6da65692b4 SHA1 a14a623b898fa420f7b8c5635815da8d7f656f48 SHA256 73b551cbfa56b49592df31fde88d654ce8c31aa09e772ec63670752b930f6847
 EBUILD neartree-3.1.1.ebuild 1193 RMD160 467b988411a85eb2da60a5a2cdc14262a05d990c SHA1 cbebaf6b9bc576dd3816d1126d5bde4eeef9ea9b SHA256 2bfae29ee158019fb35e09ffde1b07891629f5b6f062e566949a470eb5c2a84d
-MISC ChangeLog 3643 RMD160 d7c17c1f004daec76ae71e5ec5297b4b9ab59b76 SHA1 efb3a012ed518be6cbd4a0a98ab65db97d4ad85e SHA256 240cd9364a08632da39cf966dcb277a2ab3569ae89de21aaf7f67bb2e00a3fb1
+MISC ChangeLog 3836 RMD160 fdc0e30597778cf925268acda54c019b605ff730 SHA1 38f8f2cfbc4207b35b4c2e12d7b69f10072585f6 SHA256 53a72beba228572a426a8910182d1f01a27d0cdbda6ac4ab443631f883dbdab9
 MISC metadata.xml 218 RMD160 5dcdfc9ffbff78c3625f6ee6cd8242c0130bba48 SHA1 e7d6721263f31430e0dd04b17f16c27ebac78a89 SHA256 45420c665fb7a061ce85d5300ea7ed5a034a812dc286e2c87540b90d1388d79d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk/Gb14ACgkQgAnW8HDreRYflQCZAfZspemIC7Rcwqo3wJCPKZU9
-jXAAoKOrM61k+KfNpMR5RCR9/ts7Ydb9
-=A3oZ
+iEYEAREKAAYFAk/eLvsACgkQgAnW8HDreRaJhgCfcbNTXcivsBj0rhVEa9I24jNK
+uowAoKpNMK3keI6Eb9Sexhr4RA4830AB
+=jWyr
 -----END PGP SIGNATURE-----
