@@ -17,5 +17,5 @@ set_target_properties(CNearTree PROPERTIES SOVERSION ${LIB_MAJOR} VERSION ${_sov
 INSTALL(TARGETS CNearTree DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX})
 install(FILES CNearTree.h  rhrand.h  TNear.h  triple.h
 			DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
-install(FILES README_NearTree.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/neartree-${LIB_MAJOR}.${LIB_MINOR}.${LIB_RELEASE})
-install(FILES README_NearTree.html index.html DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/neartree-${LIB_MAJOR}.${LIB_MINOR}.${LIB_RELEASE}/html)
+install(FILES README_NearTree.txt DESTINATION ${DOC_DIR})
+install(FILES README_NearTree.html index.html DESTINATION ${DOC_DIR}/html)
