@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/neartree/neartree-3.1.1-r2.ebuild,v 1.1 2012/05/30 19:04:57 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/neartree/neartree-3.1.1-r3.ebuild,v 1.1 2012/06/17 19:24:38 jlec Exp $
 
 EAPI=4
 
@@ -25,4 +25,9 @@ S="${WORKDIR}"/${MY_P}
 
 src_prepare() {
 	cp "${FILESDIR}"/CMakeLists.txt . || die
+}
+
+src_configure() {
+	local mycmakeargs=( -DDOC_DIR="${EPREFIX}/usr/share/doc/${PF}" )
+	cmake-utils_src_configure
 }
