@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/neartree
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/neartree/ChangeLog,v 1.21 2012/05/30 19:04:57 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/neartree/ChangeLog,v 1.22 2012/06/17 19:24:38 jlec Exp $
+
+*neartree-3.1.1-r3 (17 Jun 2012)
+
+  17 Jun 2012; Justin Lecher <jlec@gentoo.org> -neartree-3.1.1-r2.ebuild,
+  +neartree-3.1.1-r3.ebuild, files/CMakeLists.txt:
+  Install docs into $PF, #421629
 
 *neartree-3.1.1-r2 (30 May 2012)
 
